# NLPtest

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
config/: logger.py  settings.py
math_app/: pdf_text_extractor.py  text_classifier.py
model/: vectorizer.pkl
templates/: index.html
tests/: test_app_api.py  test_pdf_text_extractor.py  test_text_classifier.py
