[tool.poetry]
name = "nlptest"
version = "0.1.0"
description = "PDF text classification app with PyTorch, Flask, and NLTK"
authors = ["Your Name <your@email.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flask = "^3.0.0"
scikit-learn = "1.7.0"
nltk = "^3.8.1"
PyPDF2 = "^3.0.1"
pydantic-settings = "^2.2.1"
numpy = "^1.26.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 